[tool.poetry]
name = "pytypes"
version = "0.1.0"
description = "Infer python types via test tracing"
authors = ["Benjamin Sparks <ab270@stud.uni-heidelberg.de>", "Viet Tran Ba <viet.tran_ba@stud.uni-heidelberg.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"
coverage = "^6.3.3"
pandas = "^1.4.2"
pathlib = "^1.0.1"
toml = "^0.10.2"
dacite = "^1.6.0"
GitPython = "^3.1.27"
click = "^8.1.3"
click-option-group = "^0.5.3"
requests = "^2.28.0"
tqdm = "^4.64.0"
libcst = "^0.4.7"

mkdocs = { version = "^1.3.1", optional = true }
mkdocs-material = { version = "^8.4.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"
mypy = "^0.960"
types-toml = "^0.10.7"
types-requests = "^2.27.30"
pandas-stubs = "^1.2.0"
pytest-order = "^1.0.1"
pytest-dependency = "^0.5.1"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
doc-tools = ["mkdocs", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_file = "test.log"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"